# wayland

./: .editorconfig  .git-blame-ignore-revs  .gitlab-ci.yml  meson.build  meson_options.txt
cursor/: meson.build
doc/: meson.build
doc/book/src/: Compositors.md  Content_Updates.md  Foreword.md  Message_XML.md  Protocol.md
doc/publican/: Architecture.xml  Content_Updates.xml  Foreword.xml  Message_XML.xml  Wayland.xml  Xwayland.xml  meson.build
doc/publican/html/css/: common.css  meson.build
doc/publican/html/images/: meson.build
doc/publican/html/images/content-updates/: meson.build
doc/publican/xsl/: doxygen-to-publican.xsl
docbook-to-mdbook/: Cargo.toml
docbook-to-mdbook/src/: main.rs
egl/: meson.build
protocol/: wayland.xml
src/: connection.c  meson.build  scanner.c  wayland-client.c  wayland-private.h  wayland-server-core.h  wayland-server.c
tests/: test-compositor.c
