foreach src : files([
	'simple-desynchronized-state-1.png',
	'simple-desynchronized-state-2.png',
	'simple-desynchronized-state-3.png',
	'simple-desynchronized-state-4.png',
	'simple-desynchronized-state-5.png',
	'simple-desynchronized-state-6.png',
	'simple-synchronized-state-1.png',
	'simple-synchronized-state-2.png',
	'simple-synchronized-state-3.png',
	'simple-synchronized-state-4.png',
	'simple-synchronized-state-5.png',
	'sync-subsurf-case1-1.png',
	'sync-subsurf-case1-2.png',
	'sync-subsurf-case1-3.png',
	'sync-subsurf-case1-4.png',
	'sync-subsurf-case1-5.png',
	'sync-subsurf-case2-1.png',
	'sync-subsurf-case2-2.png',
	'sync-subsurf-case2-3.png',
	'sync-to-desync-subsurf-1.png',
	'sync-to-desync-subsurf-2.png',
	'sync-to-desync-subsurf-3.png',
	'sync-to-desync-transition-1.png',
	'sync-to-desync-transition-2.png',
	'sync-to-desync-transition-3.png',
	'content-update-legend.png',
])
	name = fs.name(src)
	publican_inputs += fs.copyfile(
		name,
		install: true,
		install_dir: publican_install_prefix + '/html/images/content-updates',
	)
endforeach
